tidos/tests/attributes/panics/missing_variable_defined_toggle.stderr
error[E0425]: cannot find value `checked` in this scope
 --> tests/attributes/panics/missing_variable_defined_toggle.rs:6:2
  |
6 | /     view! {
7 | |         <input type="radio" name="day" value="monday" :checked />
8 | |     }
  | |_____^ not found in this scope
  |
  = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)
